RESOLVED FIXED90735
[EFL] REGRESSION (r122035): fullscreen/exit-full-screen-iframe.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=90735
Summary [EFL] REGRESSION (r122035): fullscreen/exit-full-screen-iframe.html is crashing
Chris Dumez
Reported 2012-07-08 01:16:35 PDT
The crash looks like: crash log for DumpRenderTree (pid 27037): STDOUT: <empty> STDERR: ASSERTION FAILED: this STDERR: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebCore/dom/Node.h(412) : WebCore::Document* WebCore::Node::document() const STDERR: 1 0x7fca92305f4b STDERR: 2 0x7fca92305252 STDERR: 3 0x7fca95268636 WebCore::Document::webkitExitFullscreen() STDERR: 4 0x7fca95268321 WebCore::Document::webkitCancelFullScreen() STDERR: 5 0x7fca95e0f0bc WebCore::jsDocumentPrototypeFunctionWebkitCancelFullScreen(JSC::ExecState*) STDERR: 6 0x7fca47033265 We can inspire from http://trac.webkit.org/changeset/122035/trunk/Source/WebKit/blackberry/WebCoreSupport/ChromeClientBlackBerry.cpp to fix the crash.
Attachments
Patch (3.04 KB, patch)
2012-07-08 02:06 PDT, Chris Dumez
no flags
Patch (3.05 KB, patch)
2012-07-08 02:10 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-07-08 02:06:33 PDT
Chris Dumez
Comment 2 2012-07-08 02:10:25 PDT
Created attachment 151162 [details] Patch Add [EFL] tag.
WebKit Review Bot
Comment 3 2012-07-08 20:51:43 PDT
Comment on attachment 151162 [details] Patch Clearing flags on attachment: 151162 Committed r122078: <http://trac.webkit.org/changeset/122078>
WebKit Review Bot
Comment 4 2012-07-08 20:51:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.