[EFL] REGRESSION (r122035): fullscreen/exit-full-screen-iframe.html is crashing https://bugs.webkit.org/show_bug.cgi?id=90735

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-07-08
Reviewed by Antonio Gomes.

Keep a reference to the Element passed to enterFullScreenForElement() so
that we can reuse it later in exitFullScreenForElement(). This is needed
because the Element passed to exitFullScreenForElement() may be null.
This fixes the crash for the fullscreen/exit-full-screen-iframe.html
test introduced in r122035.

* WebCoreSupport/ChromeClientEfl.cpp:
(WebCore::ChromeClientEfl::enterFullScreenForElement):
(WebCore::ChromeClientEfl::exitFullScreenForElement):
* WebCoreSupport/ChromeClientEfl.h:
(ChromeClientEfl):

Canonical link: https://commits.webkit.org/108590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122078 268f45cc-cd09-0410-ab3c-d52691b4dbfc